我的订单样式+特卖无数据页+活动页不兼容问题修改

--- a/app/css/globe.css
+++ b/app/css/globe.css
@@ -151,7 +151,8 @@ input::-webkit-input-speech-button {
 }
 .gradient-shadow {
   position: relative;
-  height: 3px;
+  height: 1px;
+  background: #e2e2e2;
 }
 .gradient-shadow:before {
   position: absolute;
