--- a/app/partials/bd_list.html
+++ b/app/partials/bd_list.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" type="text/css" href="css/baodan.css?rev=ecbb7c802386cf6d4502855198b940fa">
+<link rel="stylesheet" type="text/css" href="css/baodan.css?rev=dsjhfdfjdfjhfjd">
 
     <div class="cell" style="color:#4A4A4A">
-      <div class="cell_hd  cell_primary item " ng-class='{"red":tog==""}' ng-click='tog=""'>全&nbsp;&nbsp;&nbsp;部</div>
+      <div class="cell_hd  cell_primary item " ng-class='{"red":tog==""}' ng-click='tog=""'>全部</div>
       <div class="cell_hd  cell_primary item" ng-class='{"red":tog=="1"}' ng-click='tog="1"'>待支付</div>
       <div class="cell_hd  cell_primary item" ng-class='{"red":tog=="8"}' ng-click='tog="8"'>保障中</div>
       <div class="cell_hd  cell_primary item" ng-class='{"red":tog=="6"}' ng-click='tog="6"'>待生效</div>
@@ -19,27 +19,30 @@
           <img src="img/loading.gif" style="width:50px;">
       </div>
      -->
-
+    <ul class="bd_list_controller">
       <li class="list_item"   ng-repeat="order in filtered = (orders |filter:filterFn )">
-        <div class="order_title" style="position:relative">订单号:{{order.order_no}} <span class="bd_status">{{order.create_time  |  date:'yyyy-MM-dd'}}</span></div>
+        <div class="order_title" style="position:relative">订单号：{{order.order_no}} <span class="bd_status">{{order.create_time  |  date:'yyyy-MM-dd'}}</span></div>
         <div class="line"></div>
         <div>
             <div ng-repeat="insurance in order.insurance_orders" ng-click="goDetail(insurance.order_no,order.status)">
-              <p style="position:relative;margin-top:13px;color:#6caaea">{{insurance.order_name}} <span class="bd_status_text" style="position:absolute;right:0;color:{{getBdColor(insurance.order_status)}}"  >{{getBdStatus(order.status,insurance.order_status)}} </span></p>
+              <p style="position:relative;margin-top:13px;color:#222222;font-size: 18px;font-weight: bold;">{{insurance.order_name}} </p>
               <div ng-repeat="people in insurance.insured_peoples">
                 <p>被保人:{{people.name}}</p>
                 <p>手机号:{{people.mobile}}</p>
-                <p>身份证:{{people.social_id}}</p>
+                <p style="position: relative;">身份证:{{people.social_id}}<span class="bd_status_text" style="position:absolute;right: 5px;color:{{getBdColor(insurance.order_status)}}"  >{{getBdStatus(order.status,insurance.order_status)}} </span></p>
+                <!-- <p>:{{insurance.effective_data |date:"yyy-mm-dd HH:mm:ss"}}</p> -->
                </div>
                 <div class="line" style="clear:both;"></div>
             </div>
          
          
-          <div style="padding:10px 0;"  ng-show="order.status=='1' ||  order.status=='2'   || order.status=='3'   || order.status=='5' ">未支付:￥<span style="color:#f57590">{{order.premium/100 | number:2}}</span><div class="pay_button" ng-click="goPay(order.order_id,order.order_no,order.premium)">立即支付</div></div>
+          <div style="padding:20px 10px;color:#555555;position: relative;font-size: 18px"  ng-show="order.status=='1' ||  order.status=='2'   || order.status=='3'   || order.status=='5' ">
+             订单金额:
+            <span style="color:#555555">{{order.premium/100 | number:2}}</span>
+            <div class="pay_button" ng-click="goPay(order.order_id,order.order_no,order.premium)">立即支付</div>
+          </div>
         </div>
       </li>
-     
-     
     </div>
 
         <!--
@@ -56,7 +59,7 @@
           <div class="line" style="clear:both;"></div>
         </div>
       </li>
-      
+    </ul>  
 
     
 
