--- a/app/partials/bdm_verfylist.html
+++ b/app/partials/bdm_verfylist.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=2600659d8fe5433c5520f81d7abef880">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=ghgggh">
 <style>
 
 .pei_button{
@@ -72,7 +72,8 @@
 }
 
 .default_tip img{
-	width: 70px;
+	width: 86px;
+	height: 86px;
 }
 </style>
 <div class="container"  cg-busy="loadingPromise">
