--- a/app/css/baodan.css
+++ b/app/css/baodan.css
@@ -7,16 +7,30 @@
   color: #A0A0A0;
   font-size: 14px;
 }
-.item {
+.item{
   position: relative;
-  font-size: 17px;
+  font-size: 15px;
   text-align: center;
   margin-right: 30px;
+  /*color: #588dd4;*/
+}
+.cell_hd.red {
+  color: #588dd4;
+}
+
+.red:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #588dd4;
+  bottom: 0;
+  left: 0 ;
 }
 .item:active {
   background-color: #F3F3F3;
 }
-.item:after {
+/*.item:after {
   content: " ";
   position: absolute;
   right: 0;
@@ -30,13 +44,14 @@
   -webkit-transform: scaleX(0.5);
   -ms-transform: scaleX(0.5);
   transform: scaleX(0.5);
-}
+}*/
 .order_title {
-  padding: 5px 10px 10px 0;
-  font-size: 15px;
+  padding: 13px 10px;
+  font-size: 17px;
+  color: #555555;
 }
 .list_item {
-  padding: 10px 30px;
+  /*padding: 10px 20px;*/
   margin-bottom: 10px;
   background-color: #FFF;
   box-shadow: 0 2px 3px #cacaca;
@@ -50,7 +65,7 @@
   color: #D1D1D1;
 }
 .ul_container p {
-  margin: 5px 0 10px 0;
+  margin: 5px 10px 5px 10px;
 }
 .bd_status_text {
   color: #0f9532;
@@ -63,17 +78,27 @@
 }
 .pay_button{
   float:right;
-  padding:5px;
-  border:1px solid #ff0000;
-  background-color: #ffe8e8;
-  color:#584f4f
+  position: absolute;
+  top: 14px;
+  right: 10px;
+  background: #ff5c00;
+  padding: 8px 10px;
+  /*border:1px solid #ff0000;*/
+  /*background-color: #ffe8e8;*/
+  color:#fff;
+  border-radius: 5px;
+  font-size: 15px;
 }
 @media all and (max-width:320px) {
   .order_title, .ul_container {
     font-size: 13px;
   }
-  .list_item {
+ /* .list_item {
     padding: 10px 10px;
-  }
+  }*/
 }
 
+.bd_list_controller {
+  padding: 10px 10px 0 10px;
+  background: #f5f5f5;
+}
