--- a/app/css/product_list.css
+++ b/app/css/product_list.css
@@ -2,8 +2,8 @@
 {
     font-size: 14px;
     clear: both;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 45px;
+    /*margin-bottom: 30px;*/
     padding: 0;
     color: #a0a0a0;
     background-color: #fff;
@@ -108,6 +108,7 @@
     float: left;
 
     margin-right: 10px;
+    line-height: 0;
 }
 .small_container
 {
@@ -165,4 +166,18 @@
     font-size: .2rem;
     text-align: center;
     padding-top: .5rem;
+    background: #f5f5f5;
+
+}
+
+.cell_font img {
+    width: 86px;
+    height: 86px;
+}
+.mar_10 {
+    height: 8px;
+    background: #f5f5f5;
+}
+body {
+    background: #f5f5f5;
 }
