--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=hfgfggfhggf">
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=erregfggfggg">
 <div id="wrapper" class="wrapper">
 	<div class="bd_part_controller">
 		<ul class="layout ul_contrl">
@@ -57,7 +57,7 @@
 				</ul>
 			</div>
 			<div class="item">
-				<input type="checkbox" id="chek" ng-model="user.know_contract" name="know_contract" required >
+				<input type="checkbox" id="chek" checked="checked" ng-model="user.know_contract" name="know_contract" required >
 					我已阅读
 				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/130" class="blue"  ng-if="coupon_id==2">
 					产品条款及投保须知
@@ -71,20 +71,17 @@
 		    </div>
 		</div>
 		<form>
-	    <div class="bd_footer" ng-click='submit()' id="submitButton"  >确认投保</div>
+	   
     </div>
 </div>
-
- -->
-
-
-
+<footer class="bd_footer">
+	 <div  ng-click='submit()' id="submitButton"  >确认投保</div>
+</footer>
 
 
 
 
 
-
-
+ 
 
 
