modify the bugs

--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -176,7 +176,7 @@
 	</div>
 </div>
 
-<div id="test_baodan" style="display: none">
+<div id="test_baodan" style="display: none;margin-bottom: 70px;">
 	<div class="wrapper " >
 		<img src="img/yiyanzhen.png" style="position: absolute;top:9px;right:11px;width:70px;z-index: 5;display: none;">
 		<div class="container">
