--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -177,14 +177,14 @@
 			<td></td>
 			<td></td>
 		</tr>
-		<tr class="bd-tr" ng-repeat="item in data.analysis" ng-class="{'hide':$index>5}">
+		<tr class="bd-tr" ng-repeat="item in data.analysis" ng-class="{'hide':$index>6}">
 			<td  style="text-align:left;">{{item.name}}</td>
 			<td >{{processMoney(item.sum_insured)}}</td>
 			<td  style="text-align:right;" > {{item.score|number:2}}分</td>
 		</tr>
 	</table>
 </div>
-<div class="more" ng-if="data.analysis.length>=6">查看更多</div>
+<div class="more" ng-if="data.analysis.length>6">查看更多</div>
 <div style="background-color:#f5f5f5;height:20px;"></div>
 
 </div>
