modify the bugs

--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -57,8 +57,11 @@
 						<td>
 							<span class="gray">保障期限</span>
 							<div class="bd-effective">
-								<img src="img/cover.png"  ng-show="data.effective" />
-								<img src="img/shixiao.png"   ng-show="!data.effective" />
+
+							
+								<img src="img/wsx.png"  ng-show="data.insure_status==0 " />
+								<img src="img/cover.png"  ng-show="data.insure_status==1 " />
+								<img src="img/shixiao.png"  ng-show="data.insure_status==2" />
 							</div>
 						</td>
 						<td colspan="2">
