modify the bugs

--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -68,7 +68,7 @@
 					<div style="clear:both;"></div>
 
 					<div class="bd-effective">
-								<img src="img/wsx.png"  ng-show="data.insure_status==0 " />
+								<img src="img/wsx.png"  ng-show="policy.insure_status==0 " />
 								<img src="img/cover.png"  ng-show="policy.insure_status==1 " />
 								<img src="img/shixiao.png"  ng-show="policy.insure_status==2" />
 					</div>
