--- a/app/partials/offical_site.html
+++ b/app/partials/offical_site.html
@@ -1,4 +1,3 @@
-
 <style>
 	.main-container{
 		padding:10px;
@@ -24,7 +23,7 @@
 	.bd_th{
 	  font-size:0.18rem;
 
-	  border-bottom:1px solid #247ad1;text-align: left;
+	  border-bottom:1px solid #e2e2e2;text-align: left;
 	}
 	.bd_tr{
 	  border-bottom:1px solid #e2e2e2;text-align: left;
@@ -48,10 +47,10 @@
 	<div class="tip">注：方案中的产品，诺贝暂不支持投保请到我的方案中查看详情</div>
 			<table>
 			<tr class="bd_th">
-				<th class="blue" style="width:50%;">产品</th>
-				<th class="blue">保额</th>
+				<th class="main_color" style="width:50%;">产品</th>
+				<th class="main_color">保额</th>
 				<th></th>
-				<th class="blue" style="text-align: right">保费</th>
+				<th class="main_color" style="text-align: right">保费</th>
 			</tr>
 
 			<tr class="bd_tr" ng-repeat="plan in plans">
