--- a/app/partials/list.html
+++ b/app/partials/list.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="css/product_list.css?rev=hjghghgjh"> 
 
-<div class="cell nav" style="color:#555555;text-align: center;border-bottom:1px solid #e2e2e2">
+<div class="cell nav" style="color:#555555;text-align: center;border-bottom:1px solid #e2e2e2;font-szie: 15px;">
   <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="4"}' ng-click='getList(4);'> 意外 </div>
   <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="3"}' ng-click='getList(3);'> 人寿</div>
   <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="2"}' ng-click='getList(2);'> 健康</div>
