--- a/app/css/product_list.css
+++ b/app/css/product_list.css
@@ -169,7 +169,6 @@
     background: #f5f5f5;
 
 }
-
 .cell_font img {
     width: 86px;
     height: 86px;
@@ -180,4 +179,7 @@
 }
 body {
     background: #f5f5f5;
+}
+.font_size15 {
+  font-szie: 15px;
 }
