--- a/app/template/product_47.html
+++ b/app/template/product_47.html
@@ -1,13 +1,10 @@
 <div class="detail-container">
-  <h5>旅游，少不了沿途的风景，但意外也有可能发生</h5>
+  <h5>意外与疾病的发生总是猝不可防</h5>
   <div>
     <img src="img/product/dingshou02.jpg" ></div>
-  <h5>精选组合，8 大保障，每人可买5份！</h5>
+  <h5>家庭顶梁柱，不论你处于何种阶段，都需要给自己一份保障。</h5>
   <div>
-    <img src="img/product/dingshou02.jpg"></div>
-  <h5>24小时紧急救援，全家出游，安全有保障</h5>
-  <div>
-    <img src="img/product/tianyou05.jpg"></div>
+    <img src="img/product/dingshou03.jpg"></div>
 </div>
   <div class="line"></div>
   <h4>
