--- a/app/partials/bd_detail.html
+++ b/app/partials/bd_detail.html
@@ -4,10 +4,15 @@
 body{
 	background-color: #f6f6f6;
 }
+/*.ba_detail_controller {
+	padding: 0 21px;
+	border-bottom: 1px solid #ababab;
+}*/
 .detail_container{
 	background-color: #fff;
-	padding:0 0.1rem ;
-	box-shadow: 0 2px 2px  #cdcdcd;
+	padding:0 30px ;
+	/*box-shadow: 0 2px 2px  #cdcdcd;*/
+	/*border-bottom: 1px solid #e2e2e2;*/
 	margin-bottom: 20px;
 }
 .detail_container p{
@@ -17,16 +22,29 @@ body{
 .detail_container h4{
 	margin : 0;
 	line-height: 0.4rem;
-	font-size:0.17rem;
+	font-size: 15px;
 	font-weight: normal;
+	color: #555;
+	font-weight: bold;
 }
 .sub_container{
 	border-top:1px solid #efefef;
 	border-bottom:1px solid #efefef;
+	font-size: 13px;
+	color: #555;
+}
+.padd {
+	padding:0 30px;
+}
+.bd_detail_btn_border {
+	border-bottom: 1px solid #e2e2e2;
+	height:40px;line-height: 40px;
+}
+.bottm_border {
+	border-bottom: 1px solid #e2e2e2;
 }
 </style>
-
-<div  class="detail_container">
+<div  class="detail_container padd">
 	<h4>{{order.order_name}}</h4>
 	<div class="sub_container">
 		<p>保单号:{{order.policy_no}} <span class="fr orange" style="color:{{getBdColor(order.order_status)}}">{{getBdStatus(status,order.order_status)}} </span></p>
@@ -37,10 +55,10 @@ body{
 		<p>支付金额:<span class="red">￥{{order.order_amount/100 | number:2}}</span>元 
 		<!-- <span class="fr">本产品由<span class="blue">{{order.insurance_company_name}}</span>提供</span>--></p>
 	</div>
-	<div style="height:40px;line-height: 40px;" ng-click="showDialog()">电子保单 <span class="fr blue">发送</span></div>
+	<div class="bd_detail_btn_border" ng-click="showDialog()" ng-if="getBdStatus(status,order.order_status)!=='待支付'">电子保单 <span class="fr blue ">发送</span></div>
 </div>
 
-<div  class="detail_container" >
+<div  class="detail_container bottm_border" >
 	<h4>投保人信息</h4>
 	<p>姓名：{{order.name}}</p>	
 	<p>身份证号:{{order.social_id}}</p>	
@@ -146,4 +164,3 @@ body{
       </div>
     </form>
 	</div>
-
