--- a/app/partials/list.html
+++ b/app/partials/list.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="css/product_list.css?rev=372d16d2cb3b340f5f90571ee36a8654"> 
+<link rel="stylesheet" href="css/product_list.css?rev=dfgfdgfdgfdgfd"> 
 
-<div class="cell nav" style="color:#555555;text-align: center;border-bottom:1px solid #e2e2e2;font-szie: 15px;">
-  <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="4"}' ng-click='getList(4);'> 意外 </div>
-  <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="3"}' ng-click='getList(3);'> 人寿</div>
-  <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="2"}' ng-click='getList(2);'> 健康</div>
-  <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="1"}' ng-click='getList(1);'> 家庭</div>
-  <div class="cell_hd  cell_primary " ng-class='{"select":insurances_type=="5"}' ng-click='getList(5);'> 财产</div>
+<div class="cell nav" style="color:#555555;text-align: center;border-bottom:1px solid #e2e2e2;">
+  <div class="cell_hd  cell_primary font15 " ng-class='{"select":insurances_type=="4"}' ng-click='getList(4);'> 意外 </div>
+  <div class="cell_hd  cell_primary font15 " ng-class='{"select":insurances_type=="3"}' ng-click='getList(3);'> 人寿</div>
+  <div class="cell_hd  cell_primary font15" ng-class='{"select":insurances_type=="2"}' ng-click='getList(2);'> 健康</div>
+  <div class="cell_hd  cell_primary font15" ng-class='{"select":insurances_type=="1"}' ng-click='getList(1);'> 家庭</div>
+  <div class="cell_hd  cell_primary font15" ng-class='{"select":insurances_type=="5"}' ng-click='getList(5);'> 财产</div>
 </div>
 <ul class="ul_container"  data-ng-init="init()"   cg-busy="listPromise"  >
   <!-- <div class="mar_10"></div> -->
