--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/toubao.css?rev=bd401bc42b4132a01a1af4f13fe41acb">
+<link rel="stylesheet" type="text/css" href="css/toubao.css?rev=dfgfgffdhhh">
 
 <div class="job_main" id="job_container_1" style="display:none"  cg-busy="firstPromise" >
 	<h4>请选择行业类型</h4>
@@ -119,7 +119,7 @@
 <form class="" role="form" name="order" novalidate>
 
 	<div class="sub_title ">
-		<img src="img/safe.jpg" class="tb_logo">&nbsp;被保险人</div>
+		<img src="img/safe.jpg" class="tb_logo">被保险人</div>
 
 	<div class="sub_title " ng-show="!view.family" style="color:#f13838;padding-left: 17px;display:none;">&nbsp;仅支持为自己投保</div>
 
@@ -234,7 +234,7 @@
 	</div>
 
 	<div class="sub_title ">
-		<img src="img/safe.jpg" class="tb_logo">&nbsp;投保方案</div>
+		<img src="img/safe.jpg" class="tb_logo">投保方案</div>
 	<div class="cell ">
 		<div class="cell_hd " >
 			<div class="cell_hd_4_word">生效时间</div>
@@ -280,9 +280,8 @@
 					<div class="status {{get_taocan_css(plan.status)}}">{{taocan_status(plan.status)}}</div>
 				</td>
 			</tr>
-			<tr style="font-size: 19px;">
-				<td>共计</td>
-				<td colspan="4" style="text-align: right;color: #ff5c00;">
+			<tr style="font-size: 19px;font-size: 15px;">
+				<td colspan="2" style="text-align: left;color: #ff5c00;"><span style="color: #555;">共计</span>
 					{{premium/100}}元&emsp;&emsp;{{coverage_period}}{{genDanwei(coverage_period_type)}}
 				</td>
 			</tr>
