--- a/app/css/toubao.css
+++ b/app/css/toubao.css
@@ -6,11 +6,12 @@
 }
 
 .sub_title {
-  color: #555;
+  color: #222;
   text-align:justify;
   margin-top: 9px;
   margin-bottom:2px;
-  font-size: .18rem;
+  font-size: 15px;
+  font-weight: bold;
 }
 .cell_hd_border {
   border: 1px solid #e2e2e2;
@@ -69,6 +70,7 @@
   background: #fff url(../img/chosen.png) no-repeat right top/20px;
   border:1px solid #247ad1;
   color:#000;
+  width
 }
 table {
   width: 100%;
@@ -185,12 +187,12 @@ table td, table th {
   overflow: hidden;position: fixed;bottom:0;width:100%;
 }
 .pay_container .left{
-  margin-right:1.5rem;width:auto;border-radius: 0
+  margin-right:1.5rem;width:65%;border-radius: 0
 }
 .pay_container .right{
   background-color: #ff5c00;
   float:right;
-  width:1.5rem;
+  width: 35%;
   border-radius: 0
 }
 .status{
