--- a/app/partials/jingzhun.html
+++ b/app/partials/jingzhun.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/product_list.css?rev=372d16d2cb3b340f5f90571ee36a8654"> 
+<link rel="stylesheet" href="css/product_list.css?rev=dsfdsfds"> 
 <style>
 
 </style>
@@ -11,6 +11,11 @@
     <div class="cell_hd">
       <a href="javascript:void(0)"  style="border-radius: 0;" class="btn btn_n_primary" >直接购买</a>
     </div>
+    <!-- <ul  class="cell_font" style=" text-align: center;padding-top: 90px;" >
+      <img src="img/qidai.png" >
+      <div style="font-size: 15px;color:#999;padding-top: 10px">产品即将上线</div>
+      <div style="font-size: 15px;color:#555;">敬请期待</div>
+    </ul> -->
   </div>
 
  <ul class="ul_container"  data-ng-init="init()" cg-busy="listPromise">
