--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/ring.css?rev=7b4fa6a1ef94e10c5645e33310a8e985">
+<link rel="stylesheet" type="text/css" href="css/ring.css?rev=hkjhkjsdfjkgdf">
 
 <div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;">
 
