modify the bugs

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/ring.css?rev=hkjhkjsdfjkgdf">
+<link rel="stylesheet" type="text/css" href="css/ring.css?rev=629879cc8593b261206855e9faa98bf0">
 
 <div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;">
 
