--- a/app/partials/jingzhun.html
+++ b/app/partials/jingzhun.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/product_list.css?rev=dsfdsfds"> 
+<link rel="stylesheet" href="css/product_list.css?rev=900843a78cca125447c6a6972b1cb487"> 
 <style>
 
 </style>
