--- a/app/partials/list.html
+++ b/app/partials/list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/product_list.css?rev=dfgfdgfdgfdgfd"> 
+<link rel="stylesheet" href="css/product_list.css?rev=900843a78cca125447c6a6972b1cb487"> 
 
 <div class="cell nav" style="color:#555555;text-align: center;border-bottom:1px solid #e2e2e2;">
   <div class="cell_hd  cell_primary font15 " ng-class='{"select":insurances_type=="4"}' ng-click='getList(4);'> 意外 </div>
