--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -197,7 +197,7 @@
 	</div>
 
 	<div class="sub_title " ng-show="view.job || view.email || view.car_no">
-		<img src="img/list_02.jpg" class="tb_logo">&nbsp;补充信息</div>
+		<img src="img/safe.jpg" class="tb_logo">补充信息</div>
 	<div class="cell "  ng-show="view.job">
 		<div class="cell_hd " >
 			<div class="cell_hd_2_word">行业</div>
