--- a/app/partials/continue.html
+++ b/app/partials/continue.html
@@ -1,6 +1,4 @@
-
-
-<div style="text-align: center;margin-top: 100px;font-size:15px;">
+<!-- <div style="text-align: center;margin-top: 100px;font-size:15px;">
 	<img src="img/continue.png?v=322" style="width:200px;"/>
 	<br/>
 	<span class="blue">产品即将上线，敬请期待！</span>
@@ -8,3 +6,16 @@
 <div class="cell" style="margin:80px 20px 20px;">
 		<a href="/#/index" class="btn btn_n_primary " >返回</a>
 </div>
+ -->
+
+ 
+<style type="text/css">
+	.cell_font img{
+       width: 86px;
+	}
+</style>
+<ul  class="cell_font" style=" text-align: center;padding-top: 90px;" >
+   <img src="img/qidai.png" >
+   <div style="font-size: 15px;color:#999;padding-top: 10px">产品即将上线</div>
+   <div style="font-size: 15px;color:#555;">敬请期待</div>
+</ul>
