--- a/app/css/toubao.css
+++ b/app/css/toubao.css
@@ -72,6 +72,12 @@
   color:#000;
   width
 }
+.btn_n_primary {
+  background: #fff;
+}
+.tg_dz_fr{
+  color: #555;
+}
 table {
   width: 100%;
   border-collapse: collapse;
@@ -184,7 +190,7 @@ table td, table th {
   box-shadow: 0 0 2px #60afff;
 }
 .pay_container{
-  overflow: hidden;position: fixed;bottom:0;width:100%;
+  overflow: hidden;position: fixed;bottom:0;width:100%;border-top: 1px solid #e2e2e2;box-sizing: border-box;
 }
 .pay_container .left{
   margin-right:1.5rem;width:65%;border-radius: 0
@@ -194,6 +200,10 @@ table td, table th {
   float:right;
   width: 35%;
   border-radius: 0
+}
+.money_size {
+  font-size: .27rem;
+  font-weight: bold;
 }
 .status{
   text-align: center;
