--- a/app/partials/bz_list.html
+++ b/app/partials/bz_list.html
@@ -19,7 +19,7 @@
 					<td class="left_td">
 						<img src="img/list_bz_main.jpg" >&nbsp;{{item.name}}</td>
 					<td style="text-align: center">
-						<span class="red">{{processMoney(item.sum_insured)}}</span>
+						<span class="money_color">{{processMoney(item.sum_insured)}}</span>
 					</td>
 					<td  class="right_td">
 						<img src="img/arrow.jpg" ></td>
