--- a/app/partials/detail.html
+++ b/app/partials/detail.html
@@ -103,9 +103,9 @@
   </table>
   <div class="introd-sum">
 
-    <span class="red" style="font-weight: bold;">{{money/100 | number}}</span>
+    <span class="money_color" style="font-weight: bold;">{{money/100 | number}}</span>
     元<span ng-show="plan.premium_type==2">起</span> &nbsp;&nbsp;<span ng-show="plan.premium_type==1">保
-    <span class="red" style="font-weight: bold;"  >{{plan.coverage_period}}</span> {{danwei}}</span>
+    <span class="money_color" style="font-weight: bold;"  >{{plan.coverage_period}}</span> {{danwei}}</span>
    
     <!--
     <span class="fr">
