--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -46,7 +46,7 @@ body{
 	border-bottom: 1px solid #e2e2e2;
 }
 .choose{
-	background: #fff url(img/choose.jpg) no-repeat right;
+	background: #fff url(img/duigou.png) no-repeat right;
 	background-size:30px; 
 }
 .introd{
