--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -302,7 +302,7 @@
 
 <div class="cell pay_container"  >
 	<a href="javascript:void(0)" class="btn btn_n_primary right"  ng-click="submitbt()" id="submitButton" >确认投保</a>
-	<a href="javascript:void(0)" class="btn btn_n_primary left"   id="submitButton" >共计  {{premium/100}}元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr"   id="submitButton" >共计  <span class="money_size">{{premium/100}}</span> 元</a>
 </div>
 
 <script type="text/javascript">
