--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -36,7 +36,6 @@
 		padding:0 0.2rem;
 		background-color:#fff;
 		color:#555555;
-		border-bottom: 1px solid #e0e0e0;
 	}
 	table {
 	  width: 100%;
@@ -59,6 +58,9 @@
 	  text-align: left;
 	  line-height: 30px;
 
+	}
+	.more-container {
+	  border-bottom:1px solid #e0e0e0;
 	}
 	.more{
 		background-color: #fff;
@@ -185,7 +187,7 @@
 		</tr>
 	</table>
 </div>
-  <div id="more-container"> <div class="more" ng-if="data.analysis.length>6">查看更多</div> </div>
+  <div id="more-container" class="more-container"> <div class="more" ng-if="data.analysis.length>6">查看更多</div> </div>
 <div style="background-color:#f5f5f5;height:20px;"></div>
 
 </div>
@@ -274,6 +276,7 @@
 </div>
 <script type="text/javascript">
 	$(function(){
+		var hideIndex = 5;
 		var width = $(window).width()/2 -200;
 		$(".hex-container").css({'margin-left':width});
 		$("#more-container").on("click",'.more',function(){
@@ -282,7 +285,7 @@
 					$("table").find("tr").show();
 					$(this).html("收起");
 			}else{
-				$("table").find("tr:gt(5)").hide();
+				$("table").find("tr:gt("+hideIndex+")").hide();
 				$(this).html("查看更多");
 				$(window).scrollTop(0);
 			}
