--- a/app/partials/jingzhun.html
+++ b/app/partials/jingzhun.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/product_list.css?rev=jhjhgfgjkjkj"> 
+<link rel="stylesheet" href="css/product_list.css?rev=dsfsdfsdfsd"> 
 <div style="" class="head-container" >
   <div class="cell_hd">
     <a href="javascript:void(0)"  class="btn  btn_unchoose"  ng-click="goLairen()">个性定制</a>
@@ -7,7 +7,7 @@
     <a href="javascript:void(0)"  style="border-radius: 0;" class="btn btn_n_primary" >直接购买</a>
   </div>
 </div>
-<ul class="ul_container"  data-ng-init="init()" cg-busy="listPromise" >
+<ul class="ul_container jingzhun_ul_container"  data-ng-init="init()" cg-busy="listPromise" >
   <li class="list_item" ng-click="goDetail(item.id)"   ng-repeat="item in list">
     <div  class="img_box">
       <img ng-src="{{item.insurance_image_url}}" class="order_img"></div>
