--- a/app/partials/jingzhun.html
+++ b/app/partials/jingzhun.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/product_list.css?rev=dsfsdfsdfsd"> 
+<link rel="stylesheet" href="css/product_list.css?rev=76e7726ee2defd325ae321315397cab0"> 
 <div style="" class="head-container" >
   <div class="cell_hd">
     <a href="javascript:void(0)"  class="btn  btn_unchoose"  ng-click="goLairen()">个性定制</a>
