simple auto commit

--- a/app/partials/offical_site.html
+++ b/app/partials/offical_site.html
@@ -44,7 +44,7 @@
 	}
 </style>
 <div class="main-container">
-	<div class="tip">注：方案中的产品，诺贝暂不支持投保请到我的方案中查看详情</div>
+	<div class="tip">注：方案中的产品，诺贝暂不支持投保请到官网进行购买</div>
 			<table>
 			<tr class="bd_th">
 				<th class="main_color" style="width:50%;">产品</th>
