--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -6,8 +6,6 @@
 		line-height: 0.6rem;
 		padding:0 0.2rem 0 50px;
 		font-size:0.18rem;
-		
-		
 	}
 	header.icon_4{
 		background: #1e4e8e url('img/plane_h.png') no-repeat 18px center;
@@ -98,6 +96,15 @@
 		padding:0 0.2rem;
 		font-size:0.18rem;
 	}
+	body{
+		background-color:  #f5f5f5;
+	}
+	.content{
+		background-color:   #fff;
+	}
+	.age-title-container{
+		padding:0;
+	}
 	.hex-title-container img{
 		width:15px;
 		vertical-align: middle;
@@ -156,6 +163,37 @@
 	.hide{
 		display: none;
 	}
+	.tail-container{
+		margin-bottom: 65px;
+		padding:0 0.2rem;
+		
+	}
+	.icon-triangle{
+		width:10px;
+		vertical-align: 1px;
+	}
+	.tail-container>img{
+		width:100%;
+	}
+	.last-container{
+		padding-bottom: 30px;
+	}
+	.sub-title{
+		background-color: #f5f5f5;
+		margin:0.2rem 0;
+		padding:0 0.1rem;
+		font-size:16px;
+		line-height: 1.8;
+		position: relative;
+	}
+	.sub-title:after{
+		content: '';
+		position: absolute;
+		left:0;
+		width:0.0258rem;
+		height:100%;
+		background-color: #9dbfec;
+	}
 	/*
     .hex2.even {
         margin-top: 39px;
@@ -191,7 +229,28 @@
 <div style="background-color:#f5f5f5;height:20px;"></div>
 
 </div>
-<div>
+
+<div ng-if="type==3"  class="hex-title-container "><img src="img/safe.jpg" > 如何投保寿险</div>
+<div ng-if="type==3" class="tail-container">
+  
+  <div class="sub-title">经验生命表(死亡率/收入)</div>
+  <img src="img/age/pic.jpg">
+  <p><img class="icon-triangle" src="img/age/triangle.jpg">40岁时为收入的顶点，发生变故的损失最大</p>
+  <p><img class="icon-triangle" src="img/age/triangle.jpg">50岁以后死亡率显著增加，发生变故的概率最大</p>
+
+   <div class="sub-title">购买寿险意义</div>
+   <p>首先是转嫁死亡风向的工具,应对家庭支柱突然身故造成的收入损失风险。</p>
+   <img src="img/age/income.jpg">
+   <div class="sub-title">保障额度</div>
+	<img src="img/age/money.jpg">
+	<div class="last-container">
+
+   <div class="sub-title">保障期间</div>
+   <p>主要保障被保险人作为家庭收入主要贡献者的阶段，一般选择20年期或者保至50周岁。如果有理财和遗产传承的需求，可以购买终身寿险。</p>
+	</div>
+</div>
+
+<div ng-if="type!=='3'">
 	<div class="hex-title-container">
 		<img src="img/safe.jpg" >
 		全部{{getInsuranceCNname()}}保障 <span  ng-click="goOldEducation();">如何投保?</span></div>
